--- a/style.css
+++ b/style.css
@@ -29,3 +29,13 @@
     background-color: black;
     opacity: .8;
 }
+.signupuser{
+    background-color: black;
+}
+.aboutus{
+    text-align: justify;
+    font-size: 18px;
+    font-family: 'Century Gothic';
+    border: 2px solid #ab8514;
+    border-radius: 10px;
+}
